Bug 259651 - KAlgebra does not save grafs without file extension
Summary: KAlgebra does not save grafs without file extension
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-12 21:33 UTC by Kai Uwe Broulik
Modified: 2010-12-14 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-12-12 21:33:58 UTC
Version:           unspecified (using KDE 4.5.85) 
OS:                Linux

When saving a 2D graf, KAlgebra offers you to save it either as PNG or SVG file. I just entered a file name like “test” and no file appeared, also no error message was presendet. When doing the same again with “test.png” it works just fine.
Since file extensions are the most unneccessary thing ever invented (since we have magic numbers and meta data), I refuse to have them on my data and it works fine in most cases but KAlgebra does not work without.

Reproducible: Always
Comment 1 Aleix Pol 2010-12-14 02:26:05 UTC
It works here in my KAlgebra trunk version. I don't know why this is happening to you.

Maybe you don't have the option "Automatically select filename extension" set?
Comment 2 Kai Uwe Broulik 2010-12-14 12:58:19 UTC
No, the option is unchecked. And why is this bug marked as fixed? It is not.
Comment 3 Aleix Pol 2010-12-14 13:01:38 UTC
Then it's a kdelibs bug I guess, if you didn't uncheck it yourself.
Comment 4 Kai Uwe Broulik 2010-12-14 14:44:58 UTC
Whatever the cause is. But shouldn‘t it save the file regardless of the file name entered or extension attached? The Filetype selector is set to “PNG” and so it knows the filetype to save with. It works with other applications like Kolourpaint or Gwenview.
(The thing was unchecked by default but if it was checked I had unchecked it anyway since I don‘ŧ want file extensions)
Comment 5 Aleix Pol 2010-12-14 20:09:43 UTC
SVN commit 1206519 by apol:

Let the user save 2D graphs without file extension.

BUG: 259651


 M  +7 -3      analitzagui/graph2d.cpp  
 M  +3 -1      analitzagui/graph2d.h  
 M  +14 -3     src/kalgebra.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206519