Let the user save 2D graphs without file extension.

BUG: 259651

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1206519