src/kalgebra.cpp
@@ -56,6 +56,7 @@
 #include <KProcess>
 #include <KRecentFilesAction>
 #include <KApplication>
+#include <kabstractfilewidget.h>
 
 class Add2DOption : public InlineOptions
 {
@@ -560,9 +561,19 @@ void KAlgebra::toggleKeepAspect()
 
 void KAlgebra::saveGraph()
 {
-	QString path = KFileDialog::getSaveFileName(KUrl(), i18n("*.png|Image File\n*.svg|SVG File"), this, QString(), KFileDialog::ConfirmOverwrite);
-	if(!path.isEmpty())
-		m_graph2d->toImage(path);
+	KFileDialog dialog(KUrl(), i18n("*.png|Image File\n*.svg|SVG File"), this);
+	dialog.setOperationMode(KFileDialog::Saving);
+	dialog.setConfirmOverwrite(true);
+	
+	if(dialog.exec()) {
+		QString filter = dialog.fileWidget()->currentFilter();
+		QString filename = dialog.selectedFile();
+		
+		Graph2D::Format f=Graph2D::PNG;
+		if(filename.endsWith(".svg") || (!filename.endsWith(".png") && filter.mid(2, 3)=="svg"))
+			f=Graph2D::SVG;
+		m_graph2d->toImage(filename, f);
+	}
 }
 
 void KAlgebra::tabChanged(int n)
